[package]
name = "tokscrapedia"
version = "0.1.2"
authors = ["Haytsam Adzka Mawla <haytsam.mawla@gmail.com>"]
edition = "2021"
description = "A simple app to scrape Tokopedia and store the results in csv file"
readme = "README.md"
repository = "https://github.com/ibldzn/tokscrapedia"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "=3.0.0-rc.7", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"

[profile.release]
lto = true
debug = false
panic = "abort"
opt-level = 3
codegen-units = 1
